<resources>
    <string name="app_name">EDESIA</string>
    <string name="app_motto">Meal Planning Made Easy</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="RegisterAccount">Register Account</string>
    <string name="SignUp">Sign Up</string>
    <string name="Login">Login</string>
    <string name="Back">Back</string>
    <string name="randomizer">Randomizer</string>
    <string name="recipe_search">Recipe Search</string>
    <string name="Search">Search</string>
    <string name="grocery_list">Grocery List</string>
    <string name="home">Home</string>
    <string name="user_menu">User Menu</string>
    <string name="upload_recipe">Upload Recipe</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="Month">Month</string>
    <string name="Day">Day</string>
    <string name="Current_Meal_Plan">Current Meal Plan</string>
    <string name="Expanded_Day_View">Expanded Day View</string>
    <string name="ExpandedDayView">ExpandedDayView</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="Google_Vision">Google Vision</string>
    <string name="Logout">Logout</string>
    <string name="Randomize">Randomize</string>
    <string name="Plan">Plan</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Add">Add</string>
    <string name="recipePicture">recipePicture</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="plan_meals">Plan Meal</string>
    <string name="item_editText_hint">Write a new item</string>

    <string name="title_activity_ocr__vision">OCR_Vision</string>
    <string name="nothing">Nothing</string>
    <string name="go_to_recipe_search">Go to Recipe Search</string>

    <!-- OCR -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="img">img</string>
    <string name="find_list">Find List</string>
    <string name="home_page">Home Page</string>
    <string name="add_button_text">add item</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

</resources>
