<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings20px"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/login"
        android:icon="@drawable/contacts24px"
        android:title="@string/Logout" />
    <item
        android:id="@+id/upload_recipe"
        android:icon="@drawable/send24px"
        android:title="@string/upload_recipe" />
    <item
        android:id="@+id/current_meal_plan"
        android:icon="@drawable/calendar_today24px"
        android:title="@string/meal_plan" />
    <item
        android:id="@+id/user_menu"
        android:icon="@drawable/book24px"
        android:title="@string/user_menu" />
</menu>
