<?xml version="1.0" encoding="utf-8"?>
<!--TODO on merge: changed context from mainactivity to login fragment-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/textColor"
    android:background="@drawable/background_login_2"
    tools:context=".Login">

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="235dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="290dp"
        android:text="@string/Login" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="235dp"
        android:layout_marginBottom="290dp"
        android:text="@string/SignUp" />

    <EditText
        android:id="@+id/LoginUserName"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="480dp"
        android:cursorVisible="true"
        android:ems="10"
        android:foregroundTint="@color/colorAccent"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/design_default_color_primary"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="400dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textSize="18sp">
    </EditText>


    <TextView
        android:id="@+id/LoginTitle"
        android:layout_width="250dp"
        android:textColor="@color/textColor"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="575dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/LoginTitleMotto"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textColor="@color/textColor"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="550dp"
        android:fontFamily="cursive"
        android:text="@string/app_motto"
        android:textAlignment="center"
		android:textSize="20sp" />

</RelativeLayout>
